--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@radix-ui/react-switch": "^1.2.6",
     "next": "16.0.8",
     "postcss": "^8.5.6",
